--- a/calendar_scheduler/pubspec.yaml
+++ b/calendar_scheduler/pubspec.yaml
@@ -31,32 +31,27 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+
   cupertino_icons: ^1.0.8
-  table_calendar: ^3.1.2
-  intl: ^0.20.1
-  drift: ^2.21.0
-  drift_flutter: ^0.2.4
-  path_provider: ^2.1.5
+  table_calendar: 3.1.2
+  intl: 0.19.0
+  drift: 2.21.0
+  drift_flutter: 0.1.0
+  path_provider: 2.1.5
   path: ^1.9.0
-  get_it: ^8.0.2
-  dio: ^5.7.0
-  provider: ^6.1.2
-  uuid: ^4.5.1
+  get_it: 8.0.2
+  dio: 5.7.0
+  provider: 6.1.2
+  uuid: 4.5.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
-  flutter_lints: ^5.0.0
-  drift_dev: ^2.21.0
-  build_runner: ^2.4.13
+  flutter_lints: ^4.0.0
+  drift_dev: 2.21.0
+  build_runner: 2.4.13
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
