--- a/calendar_scheduler/pubspec.yaml
+++ b/calendar_scheduler/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   dio: 5.7.0
   provider: 6.1.2
   uuid: 4.5.1
+  firebase_core: ^3.6.0
+  cloud_firestore: ^5.4.4
 
 dev_dependencies:
   flutter_test:
